<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Daily Words of Buddha</string>
    <string name="activity_error">Failed loading Daily Words of Buddha</string>
    <string name="widget_name">Daily Words of Buddha</string>
    <string name="widget_small_name">Daily Words of Buddha (Small)</string>
    <string name="widget_large_name">Daily Words of Buddha (Large)</string>
    <string name="widget_loading">Loading Daily Words of Buddha&#8230;</string>
    <string name="widget_error">Failed loading Daily Words of Buddha</string>
    <string name="change_language">Change language</string>
    <string name="english">English</string>
    <string name="spanish">Español</string>
    <string name="french">Français</string>
    <string name="italian">Italiano</string>
    <string name="portuguese">Português</string>
    <string name="chinese">中文</string>
    <string name="feed_url">http://host.pariyatti.org/dwob_ios/dwob_english.rss</string>
    <string name="help">Help</string>
    <string name="help_msg">To install the widget: once you install this app, tap and hold on the home screen, then select Widgets and then Daily Words of Buddha.</string>
    <string name="whats_new">What\'s New</string>
    <string name="whats_new_msg">The app has been expanded to include also Pāli Word a Day and Dhamma Verses of S.N. Goenka. The widget is now available in Small and Large sizes and updates automatically. Tablet support has been enhanced.</string>
    <!--<string name="daily_words_url_en">https://host.pariyatti.org/dwob_ios/dwob_english.rss</string>-->
    <!--<string name="daily_words_url_es">https://host.pariyatti.org/dwob_ios/dwob_spanish.rss</string>-->
    <!--<string name="daily_words_url_pt">https://host.pariyatti.org/dwob_ios/dwob_portuguese.rss</string>-->
    <!--<string name="daily_words_url_it">https://host.pariyatti.org/dwob_ios/dwob_italian.rss</string>-->
    <!--<string name="daily_words_url_zh">https://host.pariyatti.org/dwob_ios/dwob_chinese.rss</string>-->
    <!--<string name="daily_words_url_fr">https://host.pariyatti.org/dwob_ios/dwob_french.rss</string>-->
    <string name="daily_words_url_en">http://kaspars.co/dwob/dwob_english.rss</string>
    <string name="daily_words_url_es">http://kaspars.co/dwob/dwob_spanish.rss</string>
    <string name="daily_words_url_pt">http://kaspars.co/dwob/dwob_portuguese.rss</string>
    <string name="daily_words_url_it">http://kaspars.co/dwob/dwob_italian.rss</string>
    <string name="daily_words_url_zh">http://kaspars.co/dwob/dwob_chinese.rss</string>
    <string name="daily_words_url_fr">http://kaspars.co/dwob/dwob_french.rss</string>
	<string name="audio_pattern_en"><![CDATA[<a[^>]* href=\"([^\"]+)\"[^>]*>Listen</a>]]></string>
	<string name="audio_pattern_es"><![CDATA[<a[^>]* href=\"([^\"]+)\"[^>]*>Escuchar</a>]]></string>
	<string name="audio_pattern_pt"><![CDATA[<a[^>]* href=\"([^\"]+)\"[^>]*>Ouça</a>]]></string>
	<string name="audio_pattern_it"><![CDATA[<a[^>]* href=\"([^\"]+)\"[^>]*>Ascolta</a>]]></string>
    <string name="audio_pattern_zh"><![CDATA[<a[^>]* href=\"([^\"]+)\"[^>]*>聆聽</a>]]></string>
    <string name="audio_pattern_fr"><![CDATA[<a[^>]* href=\"([^\"]+)\"[^>]*>Ecouter</a>]]></string>
	<string name="source_pattern_en"><![CDATA[<a[^>]* href=\"([^\"]+)\"[^>]*>View P.li on Tipitaka.org</a>]]></string>
	<string name="source_pattern_es"><![CDATA[<a[^>]* href=\"([^\"]+)\"[^>]*>Ver en P.li en Tipitaka.org</a>]]></string>
	<string name="source_pattern_pt"><![CDATA[<a[^>]* href=\"([^\"]+)\"[^>]*>Visualize o páli em Tipitaka.org</a>]]></string>
	<string name="source_pattern_it"><![CDATA[<a[^>]* href=\"([^\"]+)\"[^>]*>Guarda il Pali su Tipitaka.org</a>]]></string>
    <string name="source_pattern_zh"><![CDATA[<a[^>]* href=\"([^\"]+)\"[^>]*>Tipitaka.org 巴利原文</a>]]></string>
    <string name="source_pattern_fr"><![CDATA[<a[^>]* href=\"([^\"]+)\"[^>]*>Voir la version pāli sur Tipitaka.org</a>]]></string>
    <string name="action_update">lv.kasparsj.android.dwob.UPDATE</string>
    <string name="tab_dwob">Daily Words of Buddha</string>
    <string name="tab_pali">Pali Word a Day</string>
    <string name="tab_goenka">Dhamma Verses of S.N. Goenka</string>
    <string name="pali_word_url">http://feeds.pariyatti.org/pwad?format=xml</string>
    <string name="dhamma_verses_url">http://feeds.pariyatti.org/dohas?format=xml</string>
    <string name="zoom_in">&#43;</string>
    <string name="zoom_out">&#8212;</string>
</resources>
