<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/change_lang"
       	  android:icon="@android:drawable/ic_menu_mapmode"
          android:title="@string/change_language">
          <menu android:id="@+id/lang_menu">
              <group android:checkableBehavior="single">
	              <item android:id="@+id/english"
	                  android:title="@string/english" />
                  <item android:id="@+id/french"
                        android:title="@string/french" />
	              <item android:id="@+id/italian"
	                  android:title="@string/italian" />
	              <item android:id="@+id/portuguese"
	                  android:title="@string/portuguese" />
	              <item android:id="@+id/spanish"
	                  android:title="@string/spanish" />
                  <item android:id="@+id/chinese"
                        android:title="@string/chinese" />
              </group>
          </menu>
    </item>
    <item android:id="@+id/help"
          android:icon="@android:drawable/ic_menu_help"
          android:title="@string/help" />
    <item android:id="@+id/whats_new"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/whats_new" />
</menu>